Fixes b0fe705, aligns location with time & event

--- a/app/webroot/css/style.less
+++ b/app/webroot/css/style.less
@@ -1062,8 +1062,6 @@ ul.event_accordion {
         display: block;
         max-width: 600px;
         overflow: auto;
-    }
-    span.address {
         margin-left: 25px;
     }
     .more_info {
